@startuml
' # JUEGO #
'
class Game <<Singleton>>
class Menu <<Singleton>>
class CollisionsEngine <<Singleton>>
class GraphicEngine <<Singleton>>
class LevelReader <<Singleton>>
Game "1" --> "1" Menu
Game "1" *-- "1" Level
Game "1" -r---> "1" Character
Game "1" *-u- "1" GraphicEngine
Game "1" *-u- "1" CollisionsEngine
Game "1" --> "1" Ranking
Game "1" -u- "1" LevelReader
Game "1" --> "0..*" Entity
LevelReader "1" -- CollisionsEngine
LevelReader "1" -- GraphicEngine

' # ENTIDAD #
'
interface Entity
Entity "1" ---u-> "0..*" GraphicElement
Entity "1" ---u- "0..*" Collider

' # GRAFICA #
'
interface GraphicElement
class SpriteFactory <<Singleton>>
class Sprite <<Flyweight>>
Sprite "0..*" --o "1" SpriteFactory
GraphicElement o-r- "0..*" Sprite
GraphicElement "1..*" -- "1" GraphicEngine
GraphicElement "1" --> "1" Position

' # COLLISIONS #
'
interface Collider
abstract class GameCollider
Collider "1" --> "0..1" Position
Collider "1..*" -- "1" CollisionsEngine
GameCollider .....|> Collider
CharacterCollider .u.|> GameCollider
EnemyCollider .u.|> GameCollider
PlatformCollider .u.|> GameCollider
CoinCollider .u.|> GameCollider
PowerUpCollider .u.|> GameCollider
FireBallCollider .u.|> GameCollider

' # PERSONAJE #
'
interface CharacterState <<Command>>
class Character
Character ..d...|> Entity
Character "1" -- "0..*" CharacterState
Super .u.|> CharacterState
Fire .u.|> CharacterState
Invincible .u.|> CharacterState
interface EnemyCollision <<Strategy>>
interface BrickCollision <<Strategy>>
class FireBallThrower
class Croucher
FireBallThrower .d.|> Entity
Croucher .d.|> Entity
Character <-d- FireBallThrower
Character <-d- Croucher
DefaultBrickCollision .u.|> BrickCollision
BreakBrickCollision .u.|> BrickCollision
DefaultEnemyCollision .u.|> EnemyCollision
SuperEnemyCollision .u.|> EnemyCollision
InvincibleEnemyCollision .u.|> EnemyCollision
Character o-d- "1" EnemyCollision
Character o-d- "1" BrickCollision
Character --> Position

' # NIVEL #
'
interface Platform
interface Enemy
interface PowerUp
class Coin
Platform ...u.|> Entity
Enemy ..u.|> Entity
PowerUp ..u.|> Entity
Coin .u.|> Entity

' # ENEMIGOS #
'

Goomba .u.|> Enemy
KoopaTroopa .u.|> Enemy
KoopaTroopa "1" o-- "1" Shell
PiranhaPlant .u.|> Enemy
Lakitu .u.|> Enemy
Spiny .u.|> Enemy
BuzzyBeattle .u.|> Enemy
Pipe --> "0..1" PiranhaPlant

' # PLATAFORMAS #
'
Void .u.|> Platform
SolidBlock .u.|> Platform
SolidBrick -u-|> SolidBlock
QuestionBlock -u-|> SolidBlock
Pipe .u.|> Platform

' # POWERUPS #
'
SuperMushroom .u.|> PowerUp
FireFlower .u.|> PowerUp
Star .u.|> PowerUp
GreenMushroom .u.|> PowerUp

' # PROYECTIL #
'
interface Proyectile
Proyectile .u.|> Entity
FireBall .u.|> Proyectile
Star .u.|> Proyectile

' # MOVABLE #
interface Movable
Enemy .u.|> Movable
GreenMushroom .u.|> Movable
SuperMushroom .u.|> Movable

' # FORMATTING #
'
@enduml